--- a/frontend/src/components/Upload/Upload.css
+++ b/frontend/src/components/Upload/Upload.css
@@ -1,16 +1,17 @@
-.upload-container{
+.upload__container {
     display: flex;
     flex-direction: column;
-    width: 100%;    
+    width: 100%;
     padding-top: 1rem;
-    gap:1.5rem;   
+    gap: 1.5rem;
 }
 
-.upload-header{
+.upload__header {
     padding-left: 1rem;
     color: var(--primary-color)
 }
-.upload-form{
+
+.upload__form {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -18,10 +19,14 @@
     background-color: #ffffff;
     border: solid 0.5px #e5e7eb;
     border-radius: 0.5rem;
-    padding: 0.5rem;
-    
+    /* padding-top: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem; */
+    padding: 1rem;
+
 }
-.upload-select-file{
+
+.upload-select-file {
     display: flex;
     flex-direction: row;
     flex-grow: 1;
@@ -30,33 +35,38 @@
     gap: 2rem;
 }
 
-.upload-input-file-wrapper{
+.upload-input-file-wrapper {
     display: flex;
-    flex-grow: 1;        
+    flex-grow: 1;
     border: 1px dashed var(--primary-color);
     border-radius: 0.5rem;
-    padding: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 1rem;
     position: relative;
     cursor: pointer;
-    color:var(--text-color);    
+    color: var(--text-color);
     flex-direction: row;
     align-items: center;
 
-    
+
 }
 
 .upload-input-file-wrapper-disabled {
     display: flex;
-    flex-grow: 1;    
+    flex-grow: 1;
     width: 100%;
-    text-align: center;    
+    text-align: center;
     border: 1px solid #e5e7eb;
     border-radius: 0.5rem;
-    padding: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 1rem;
     position: relative;
-   
+
 }
-.upload-input-file-input{      
+
+.upload-input-file-input {
     display: block;
     height: 100%;
     width: 100%;
@@ -66,29 +76,30 @@
     left: 0;
     right: 0;
     opacity: 0;
-    cursor: pointer;            
+    cursor: pointer;
 }
 
-.upload-input-file-input:disabled {    
-    cursor:default;
+.upload-input-file-input:disabled {
+    cursor: default;
 }
 
-.close{
-    
+.close {
+
     position: absolute;
     right: 1rem;
-    top:calc(50% - 1rem);
+    top: calc(50% - 1rem);
     height: 2rem;
     width: 2rem;
     border-radius: 50%;
-    border: 1px solid #e5e7eb;    
+    border: 1px solid #e5e7eb;
     background-color: var(--primary-color);
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
     font-size: 1rem;
     cursor: pointer;
 }
+
 .close-disabled {
     display: flex;
     flex-shrink: 1;
@@ -97,75 +108,101 @@
     opacity: 0;
     cursor: default;
 }
-.close::after{
-    content: "\0058";     
+
+.close::after {
+    content: "\0058";
     color: var(--primary-color-text);
 }
-.upload-form-val-message{
+
+.upload-form-val-message {
     display: flex;
     height: 2rem;
-    padding-left: 1.5rem;
+    padding-left: 1rem;
     align-items: center;
     font-size: 0.8rem;
     /* background-color: aqua; */
 }
-.upload-form-errors{
+
+.upload-form-errors {
     width: 100%;
     border: solid 0.5px #e5e7eb;
     border-radius: 0.5rem;
-    padding-left: 0.5rem;
+    padding-left: 1rem;
     display: flex;
-    flex-direction: column;    
-    height: 4rem;    
+    flex-direction: column;
+    height: 5rem;
     align-items: left;
-    justify-content: flex-start;    
-    overflow-y: auto;    
+    justify-content: flex-start;
+    overflow-y: auto;
 }
+
 .upload-form-errors-disabled {
-    width: 100%;    
+    width: 100%;
     padding-left: 0.5rem;
     display: flex;
     flex-direction: column;
-    height: 4rem;    
+    height: 4rem;
 }
 
 .upload-form-errors::-webkit-scrollbar {
     width: 0.5rem;
-    
+
 }
 
 .upload-form-errors::-webkit-scrollbar-track {
     background-color: var(--primary-color-text);
     border: solid 0.5px #e5e7eb;
     border-radius: 5px;
-    
+
 }
 
 .upload-form-errors::-webkit-scrollbar-thumb {
-    background-color:var(--primary-color);    
+    background-color: var(--primary-color);
     border-radius: 5px;
 }
 
 
-.upload-form-errors-error{    
+.upload-form-errors-error {
     padding-top: 0.1rem;
     font-size: 0.6rem;
 }
 
-.upload-form-buttons{
+.upload-form-buttons {
     display: flex;
-    
+
     height: 2rem;
     align-items: center;
     justify-content: center;
 }
-.upload-button{
+
+.upload-button {
     background-color: var(--primary-color);
     padding-left: 1rem;
-    padding-right:1rem ;
-    color:var(--primary-color-text);
-    height: 2rem;   
+    padding-right: 1rem;
+    color: var(--primary-color-text);
+    height: 2rem;
     border-radius: 5px;
     border: none;
-    
+
+}
+
+.upload__date_plant_picker {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    border: solid 0.5px #e5e7eb;
+    border-radius: 0.5rem;
+}
+
+.upload__picker {
+
+    display: flex;
+    gap: 1rem;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
